FE: char overflow issues

--- a/client/src/Styles/chat/_chat.scss
+++ b/client/src/Styles/chat/_chat.scss
@@ -5,9 +5,13 @@
   }
   .chatGrid {
     height: 100%;
+    &.listItems {
+      overflow: auto;
+    }
   }
   .usersList {
     height: 100%;
+    overflow: hidden;
   }
 
   .chatInterface {
