--- a/client/src/Styles/style.css
+++ b/client/src/Styles/style.css
@@ -72,8 +72,12 @@
 .chatContainer .chatGrid {
   height: 100%; }
 
+.chatContainer .chatGrid.listItems {
+  overflow: auto; }
+
 .chatContainer .usersList {
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 .chatContainer .chatInterface {
   position: relative; }
